[gd_scene load_steps=6 format=3 uid="uid://b40fti5fs34lr"]

[ext_resource type="Script" path="res://menus/GameUI/pause_panel.gd" id="1_he7c6"]
[ext_resource type="Material" uid="uid://dw5ry2b5wv5ra" path="res://RogueFroggerAssets/RFAssets/shaders/blur.tres" id="2_c0ale"]

[sub_resource type="Animation" id="Animation_wqa0x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f5j0v"]
resource_name = "startpause"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_we8tw"]
_data = {
"RESET": SubResource("Animation_wqa0x"),
"startpause": SubResource("Animation_f5j0v")
}

[node name="pause" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_he7c6")

[node name="blur" type="ColorRect" parent="."]
material = ExtResource("2_c0ale")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
color = Color(0.443137, 0.458824, 0.443137, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ColorRect"]
layout_mode = 2
offset_right = 500.0
offset_bottom = 476.0

[node name="pause" type="Label" parent="CenterContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Paused
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="CenterContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seed" type="Label" parent="CenterContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Seed: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/ColorRect/VBoxContainer"]
layout_mode = 2

[node name="retry" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(164, 164)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="menu" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(164, 164)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Menu"

[node name="quit" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(164, 164)
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_we8tw")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/HBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/HBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/HBoxContainer/quit" to="." method="_on_quit_pressed"]
